<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/img_splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="17dp"
        android:paddingRight="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/tvEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvPassword"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconCheck"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_check_box" />

            <com.google.android.material.textview.MaterialTextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvRemember"
                android:textColor="@color/tvRemember"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="70dp"
            android:background="@color/red"
            android:text="@string/btnLogin"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvCAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/tvCAccount"
            android:textColor="@color/CorCAccount"
            android:textSize="18sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>