<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/img_splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="17dp"
        android:paddingRight="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/tvName"
                android:inputType="textPersonName"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/tvEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvPassword"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRPasswordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvRPassword"
                android:inputType="textPassword"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="36dp"
            android:background="@color/red"
            android:text="@string/btnRegister"
            android:textColor="@color/white" />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>