<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterGameActivity"
    android:background="@drawable/img_splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:paddingLeft="17dp"
        android:paddingRight="12dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameGameR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/tvName"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreatedGR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvCreated"
                android:inputType="textEmailAddress"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescriptionGR"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvDescription"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSaveGame"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="50dp"
            android:background="@color/red"
            android:text="@string/btnSaveGame"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="140dp"
        android:background="@drawable/shape_register_game"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivAddGameR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_camera" />

    </LinearLayout>


</RelativeLayout>