<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditGameActivity"
    android:background="@drawable/img_splash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/background_login"
        android:orientation="vertical"
        android:paddingLeft="17dp"
        android:paddingRight="12dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameGameE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/tvName"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCreatedGE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvCreated"
                android:inputType="number"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="@color/white"
            android:textColorHint="@color/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescriptionGE"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/tvDescription"
                android:inputType="text"
                android:textColor="@color/textColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSaveGame"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="50dp"
            android:background="@color/red"
            android:text="@string/btnSaveGame"
            android:textColor="@color/white" />


    </LinearLayout>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="140dp"
        android:backgroundTint="@color/red"
        app:cardElevation="0dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:id="@+id/ivAddGameE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


</RelativeLayout>